--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ h1 > .auto-type {
  -webkit-text-fill-color: transparent;
  transform: translateY(100px);
  opacity: 0;
- transition: transform 1s; opacity: 0.5s; -webkit-text-stroke-color 0.5s;
+ transition: transform 1s, opacity 0.5s, -webkit-text-stroke-color 0.5s;
  
 }
 
@@ -267,7 +267,7 @@ margin-right: 50px;
  font-size: 50px;
  font-weight: 500;
  text-transform: capitalize;
- letter-spacig: 1px;
+ letter-spacing: 1px;
  margin-bottom: 20px;
  
 }
@@ -645,7 +645,7 @@ main.rowx{
  -webkit-text-fill-color: transparent;
  transform: translateY(100px);
  opacity: 0;
- transition: transform 1s; opacity: 0.5s; -webkit-text-stroke-color 0.5s;
+ transition: transform 1s, opacity 0.5s, -webkit-text-stroke-color 0.5s;
  
 }
 
@@ -785,24 +785,18 @@ margin-right: 50px;
 }
 
 
-
 .porp2 {
- display: none;￼
+ max-width: 1920px;
+ width: 90%;
+ margin: auto;
+ padding: 10px 0px;
+ display: none;
 }
 
 
 .porp2.tt-t1{
  Display: block;
 }
-
-
-.porp2 {
- max-width: 1920px;
- width: 90%;
- margin: auto;
- padding: 10px 0px;
-}
-
 
 .porp3 {
  display: flex;
@@ -819,12 +813,12 @@ margin-right: 50px;
 
 
 
-.porp5 img{
- width: 100%;
- height;100%;
- border-radius: 9px;
- object-fit: cover;
- transition: transform 0.5s;
+.porp5 img {
+    width: 100%;
+    height: 100%; /* Corrected */
+    border-radius: 9px;
+    object-fit: cover;
+    transition: transform 0.5s;
 }
 
 .porp6000 {
@@ -837,7 +831,7 @@ margin-right: 50px;
  bottom: 0;
  overflow: hidden;
  display: flex;
- align-item: center;
+ align-items: center;
  justify-content: center;
  flex-direction: column;
  top: 0;
@@ -853,13 +847,12 @@ margin-right: 50px;
 .porp5 {
  position: relative; 
  width: 100%; 
-  
  border-radius: 10px;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
- align-item: center;
+ align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
@@ -1603,6 +1596,355 @@ margin-right: 50px;
   text-decoration: none;
   text-transform: lowercase;
 }
+
+
+
+
+
+
+
+
+
+.popupag1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.1rem;
+  z-index: 20;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.popupag1.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popupag2 {
+  background-color: #3A3B3C;
+  width: 1200px;
+  border-radius: 8px;
+  padding: 40px;
+  position: relative;
+}
+
+.popupag3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.popupag4 {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.popupag8,
+.popupag11 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.popupag10 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.popupag12 li {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  list-style: none;
+}
+
+.popupag12 li:last-child {
+  margin-bottom: 0;
+}
+
+.popupag12 li span {
+  font-weight: normal;
+}
+
+.popupag12 a {
+  color: #ff0000;
+  text-decoration: none;
+  text-transform: lowercase;
+}
+
+
+
+
+
+
+
+
+.popupah1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.1rem;
+  z-index: 20;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.popupah1.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popupah2 {
+  background-color: #3A3B3C;
+  width: 1200px;
+  border-radius: 8px;
+  padding: 40px;
+  position: relative;
+}
+
+.popupah3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.popupah4 {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.popupah8,
+.popupah11 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.popupah10 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.popupah12 li {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  list-style: none;
+}
+
+.popupah12 li:last-child {
+  margin-bottom: 0;
+}
+
+.popupah12 li span {
+  font-weight: normal;
+}
+
+.popupah12 a {
+  color: #ff0000;
+  text-decoration: none;
+  text-transform: lowercase;
+}
+
+
+
+
+
+
+
+
+.popupai1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.1rem;
+  z-index: 20;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.popupai1.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popupai2 {
+  background-color: #3A3B3C;
+  width: 1200px;
+  border-radius: 8px;
+  padding: 40px;
+  position: relative;
+}
+
+.popupai3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.popupai4 {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.popupai8,
+.popupai11 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.popupai10 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.popupai12 li {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  list-style: none;
+}
+
+.popupai12 li:last-child {
+  margin-bottom: 0;
+}
+
+.popupai12 li span {
+  font-weight: normal;
+}
+
+.popupai12 a {
+  color: #ff0000;
+  text-decoration: none;
+  text-transform: lowercase;
+}
+
+
+
+
+
+
+
+
+.popupaj1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.1rem;
+  z-index: 20;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.popupaj1.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popupaj2 {
+  background-color: #3A3B3C;
+  width: 1200px;
+  border-radius: 8px;
+  padding: 40px;
+  position: relative;
+}
+
+.popupaj3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.popupaj4 {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.popupaj8,
+.popupaj11 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.popupaj10 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.popupaj12 li {
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  list-style: none;
+}
+
+.popupaj12 li:last-child {
+  margin-bottom: 0;
+}
+
+.popupaj12 li span {
+  font-weight: normal;
+}
+
+.popupaj12 a {
+  color: #ff0000;
+  text-decoration: none;
+  text-transform: lowercase;
+}
                                     /* services ￼ 1 */
 
 
@@ -1829,7 +2171,7 @@ kk1 {
 }
 
 .input-bx input,
-.input-bx textarea { /* Add styles for both input and textarea */
+.input-bx textarea {
     width: 100%;
     padding: 10px;
     border: 2px solid #fff;
@@ -1837,8 +2179,7 @@ kk1 {
     outline: none;
     font-size: 1rem;
     transition: 0.6s;
-    background: #000000;￼
-    
+    background: #000000;
 }
 
 .input-bx span {
@@ -2046,19 +2387,6 @@ font-size: 20px;
    font-size: 50px;
   }
 
-  
- 
-  
-  
 
 
-
-
-
-
-
-
-
-
-
-
+}
